[package]
name = "asciimov"
version = "0.1.0"
edition = "2021"
authors = ["Junyang Lu <jlu@umass.edu>"]
license = "MIT OR Apache-2.0"
description = "A command line tool to generate ascii art given an image. Also has some image processing power."
readme = "README.md"
homepage = "https://github.com/Jun-L04/asciimov"
repository = "https://github.com/Jun-L04/asciimov"
keywords = ["cli", "ascii", "grayscale"]
categories = ["command-line-utilities"]


[dependencies]
clap = {version = "4.0", features = ["derive"]}
image = "0.25.5"
indicatif = "0.17.9"
crossterm = "0.28.1"